// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flex-basis: 10px: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-basis": {
      "setterCode": "setStyleFlexBasis(10, UniCSSUnitType.PX)",
      "valueCode": "new UniCSSUnitValue(10, UniCSSUnitType.PX)",
    },
  },
}
`;

exports[`flex-basis: 10px: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-basis: 50%: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-basis": {
      "setterCode": "setStyleFlexBasis(50, UniCSSUnitType.PCT)",
      "valueCode": "new UniCSSUnitValue(50, UniCSSUnitType.PCT)",
    },
  },
}
`;

exports[`flex-basis: 50%: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-basis: auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-basis": {
      "setterCode": "setStyleFlexBasis(UTSCPP.propertyAccess(UniCSSFlexBasisType, "::", "Auto"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexBasisType, "::", "Auto")",
    },
  },
}
`;

exports[`flex-basis: auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-basis: content: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "flex-basis",
        "important": false,
        "prop": "flexBasis",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "content",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`content\` is not supported for \`flex-basis\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`flex-basis: content: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "flex-basis",
        "important": false,
        "prop": "flexBasis",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "content",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`content\` is not supported for \`flex-basis\` (supported values are: \`number\`|\`pixel\`|\`percent\`|\`auto\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`flex-direction: column: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-direction": {
      "setterCode": "setStyleFlexDirection(UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "Column"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "Column")",
    },
  },
}
`;

exports[`flex-direction: column: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-direction: column-reverse: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-direction": {
      "setterCode": "setStyleFlexDirection(UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "ColumnReverse"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "ColumnReverse")",
    },
  },
}
`;

exports[`flex-direction: column-reverse: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-direction: row: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-direction": {
      "setterCode": "setStyleFlexDirection(UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "Row"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "Row")",
    },
  },
}
`;

exports[`flex-direction: row: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-direction: row-reverse: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-direction": {
      "setterCode": "setStyleFlexDirection(UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "RowReverse"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexDirectionType, "::", "RowReverse")",
    },
  },
}
`;

exports[`flex-direction: row-reverse: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-grow: 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-grow": {
      "setterCode": "setStyleFlexGrow(0)",
      "valueCode": "0",
    },
  },
}
`;

exports[`flex-grow: 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-grow: 1: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-grow": {
      "setterCode": "setStyleFlexGrow(1)",
      "valueCode": "1",
    },
  },
}
`;

exports[`flex-grow: 1: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-grow: 2: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-grow": {
      "setterCode": "setStyleFlexGrow(2)",
      "valueCode": "2",
    },
  },
}
`;

exports[`flex-grow: 2: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-shrink: 0: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-shrink": {
      "setterCode": "setStyleFlexShrink(0)",
      "valueCode": "0",
    },
  },
}
`;

exports[`flex-shrink: 0: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-shrink: 1: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-shrink": {
      "setterCode": "setStyleFlexShrink(1)",
      "valueCode": "1",
    },
  },
}
`;

exports[`flex-shrink: 1: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-shrink: 2: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-shrink": {
      "setterCode": "setStyleFlexShrink(2)",
      "valueCode": "2",
    },
  },
}
`;

exports[`flex-shrink: 2: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-wrap: nowrap: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-wrap": {
      "setterCode": "setStyleFlexWrap(UTSCPP.propertyAccess(UniCSSFlexWrapType, "::", "Nowrap"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexWrapType, "::", "Nowrap")",
    },
  },
}
`;

exports[`flex-wrap: nowrap: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-wrap: wrap: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-wrap": {
      "setterCode": "setStyleFlexWrap(UTSCPP.propertyAccess(UniCSSFlexWrapType, "::", "Wrap"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexWrapType, "::", "Wrap")",
    },
  },
}
`;

exports[`flex-wrap: wrap: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`flex-wrap: wrap-reverse: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "flex-wrap": {
      "setterCode": "setStyleFlexWrap(UTSCPP.propertyAccess(UniCSSFlexWrapType, "::", "WrapReverse"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSFlexWrapType, "::", "WrapReverse")",
    },
  },
}
`;

exports[`flex-wrap: wrap-reverse: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: auto: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "justify-content",
        "important": false,
        "prop": "justifyContent",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`justify-content\` (supported values are: \`center\`|\`flex-start\`|\`flex-end\`|\`space-between\`|\`space-around\`|\`space-evenly\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`justify-content: auto: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "justify-content",
        "important": false,
        "prop": "justifyContent",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "auto",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`auto\` is not supported for \`justify-content\` (supported values are: \`center\`|\`flex-start\`|\`flex-end\`|\`space-between\`|\`space-around\`|\`space-evenly\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`justify-content: baseline: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "justify-content",
        "important": false,
        "prop": "justifyContent",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "baseline",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`baseline\` is not supported for \`justify-content\` (supported values are: \`center\`|\`flex-start\`|\`flex-end\`|\`space-between\`|\`space-around\`|\`space-evenly\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`justify-content: baseline: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "justify-content",
        "important": false,
        "prop": "justifyContent",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "baseline",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`baseline\` is not supported for \`justify-content\` (supported values are: \`center\`|\`flex-start\`|\`flex-end\`|\`space-between\`|\`space-around\`|\`space-evenly\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`justify-content: center: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "justify-content": {
      "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "Center"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "Center")",
    },
  },
}
`;

exports[`justify-content: center: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: flex-end: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "justify-content": {
      "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "FlexEnd"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "FlexEnd")",
    },
  },
}
`;

exports[`justify-content: flex-end: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: flex-start: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "justify-content": {
      "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "FlexStart"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "FlexStart")",
    },
  },
}
`;

exports[`justify-content: flex-start: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: space-around: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "justify-content": {
      "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "SpaceAround"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "SpaceAround")",
    },
  },
}
`;

exports[`justify-content: space-around: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: space-between: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "justify-content": {
      "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "SpaceBetween"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "SpaceBetween")",
    },
  },
}
`;

exports[`justify-content: space-between: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: space-evenly: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {
    "justify-content": {
      "setterCode": "setStyleJustifyContent(UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "SpaceEvenly"))",
      "valueCode": "UTSCPP.propertyAccess(UniCSSJustifyContentType, "::", "SpaceEvenly")",
    },
  },
}
`;

exports[`justify-content: space-evenly: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [],
  "obj": {},
}
`;

exports[`justify-content: stretch: app-harmony(dom-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "justify-content",
        "important": false,
        "prop": "justifyContent",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "stretch",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`stretch\` is not supported for \`justify-content\` (supported values are: \`center\`|\`flex-start\`|\`flex-end\`|\`space-between\`|\`space-around\`|\`space-evenly\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;

exports[`justify-content: stretch: app-harmony(nv-c) 1`] = `
{
  "code": undefined,
  "messages": [
    Warning {
      "node": CustomDeclaration {
        "__originalProp": "justify-content",
        "important": false,
        "prop": "justifyContent",
        "remove": [Function],
        "replaceWith": [Function],
        "value": "stretch",
        Symbol(expanded): true,
        Symbol(normalized): true,
      },
      "text": "ERROR: property value \`stretch\` is not supported for \`justify-content\` (supported values are: \`center\`|\`flex-start\`|\`flex-end\`|\`space-between\`|\`space-around\`|\`space-evenly\`)",
      "type": "warning",
    },
  ],
  "obj": {},
}
`;
